@@ -1,3 +1,8 @@
+2018-09-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* c-ada-spec.c: Include diagnostic.h.
+	(dump_ada_declaration) <RECORD_TYPE>: Issue a warning on packed layout.
+
 2018-09-19  Marek Polacek  <polacek@redhat.com>
 
 	* c.opt (Wclass-conversion): New.
